--- a/Types(구대환).ipynb
+++ b/Types(구대환).ipynb
@@ -198,13 +198,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HIryMJpY4YD7",
-        "outputId": "81ae6ad1-9cdb-4826-99b9-506184d0dc1e"
+        "outputId": "36e4b590-b12b-40f7-b369-404b3550cbeb"
       },
       "outputs": [
         {
@@ -260,32 +260,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 205
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9T2aR5TF4YD8",
-        "outputId": "593fe740-dd4f-4182-c3d3-810caab1a47f"
+        "outputId": "67edcf66-2249-464f-e9cf-fb34d88deba9"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-68-c663f9be0a06>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Print string as error message\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mfrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Hello, Python!\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#print\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'frint' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Python!\n"
           ]
         }
       ],
       "source": [
         "# Print string as error message\n",
         "\n",
-        "frint(\"Hello, Python!\") #print"
+        "print(\"Hello, Python!\") #print"
       ]
     },
     {
@@ -315,13 +310,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "W_dY2fNh4YD8",
-        "outputId": "c4977990-33e5-420a-9b9c-ccebc0975e79"
+        "outputId": "1b558711-fba3-446d-c243-ed8765d898f9"
       },
       "outputs": [
         {
@@ -367,32 +362,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 240
+          "base_uri": "https://localhost:8080/"
         },
         "id": "aOtFXDvP4YD8",
-        "outputId": "e0bbcd8b-0398-40f4-e69d-c728e6e98570"
+        "outputId": "2605f5ae-88d3-489d-fec8-d3f397a0b539"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "This will be printed\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-75-af59af1b345d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"This will be printed\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"This will cause an error\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"This will NOT be printed\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'frint' is not defined"
+            "This will be printed\n",
+            "This will cause an error\n",
+            "This will NOT be printed\n"
           ]
         }
       ],
@@ -400,7 +385,7 @@
         "# Print string and error to see the running order\n",
         "\n",
         "print(\"This will be printed\")\n",
-        "frint(\"This will cause an error\")\n",
+        "print(\"This will cause an error\")\n",
         "print(\"This will NOT be printed\")"
       ]
     },
@@ -460,9 +445,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jMYnHwEQVg8E",
-        "outputId": "fd0ab05f-b0e0-4b2b-9cc0-6c3db723e7cb"
+        "outputId": "cfdad5ef-f0d7-444d-dba1-8042c5f80327"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,9 +488,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d1NWBZIkVmOL",
-        "outputId": "75b74a5a-65cf-4012-babf-27e6726c5eee"
+        "outputId": "5e1d3b2f-f708-4d86-ac20-5662b9aa5d5a"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,11 +621,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "JjWLW0TA4YD-"
+        "id": "JjWLW0TA4YD-",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4f3b7264-436a-4e7d-8815-a30895526e0c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hello, Python 101!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ],
       "source": [
         "# String\n",
         "\n",
@@ -801,9 +805,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oqlnri5xaR8A",
-        "outputId": "06f591ea-b142-458c-f604-a9149a0329aa"
+        "outputId": "48534fc0-e9c0-43d3-cb49-4a80394fcc80"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -813,7 +817,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 9
         }
       ]
     },
@@ -1265,32 +1269,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 205
+          "base_uri": "https://localhost:8080/"
         },
         "id": "DCzReUps4YEC",
-        "outputId": "72215d59-a113-457c-e0d6-9954c516053b"
+        "outputId": "04307e5a-9420-4632-a7c3-d661f205aa06"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-107-b78145d165c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Convert a string into an integer with error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1 or 2 people'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '1 or 2 people'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ],
       "source": [
         "# Convert a string into an integer with error\n",
         "\n",
-        "int('1 or 2 people')"
+        "int('12')"
       ]
     },
     {
@@ -2665,7 +2667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "4D45AV4o4YEJ",
         "colab": {
