--- a/Types(구대환).ipynb
+++ b/Types(구대환).ipynb
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -362,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -411,13 +411,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "1xa4Ohxf4YD9"
+        "id": "1xa4Ohxf4YD9",
+        "outputId": "bafdcf64-f8f2-42a5-dcaf-57b46ea4d34c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, world!\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "print(\"Hello, world!\")"
       ]
     },
     {
@@ -447,7 +460,7 @@
         "id": "jMYnHwEQVg8E",
         "outputId": "cfdad5ef-f0d7-444d-dba1-8042c5f80327"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,9 +501,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d1NWBZIkVmOL",
-        "outputId": "5e1d3b2f-f708-4d86-ac20-5662b9aa5d5a"
+        "outputId": "2468c6b7-3c14-4ebd-8985-523dd62e6d34"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "JjWLW0TA4YD-",
         "colab": {
@@ -807,7 +820,7 @@
         "id": "oqlnri5xaR8A",
         "outputId": "48534fc0-e9c0-43d3-cb49-4a80394fcc80"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1269,7 +1282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1769,13 +1782,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "j7J6Q-BK4YEE"
+        "id": "j7J6Q-BK4YEE",
+        "outputId": "06bde6e1-e06c-41fb-aac0-c42971895a33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
       "source": [
-        "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+        "6/2"
       ]
     },
     {
@@ -1802,13 +1831,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "fpToz7T34YEF"
+        "id": "fpToz7T34YEF",
+        "outputId": "46ef2fa1-0cde-4557-c111-d17a5138ba04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
       "source": [
-        "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+        "6//2"
       ]
     },
     {
@@ -2112,13 +2157,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "Lc5Qhc164YEH"
+        "id": "Lc5Qhc164YEH",
+        "outputId": "178be760-6d29-4336-919b-b7309d6703bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
       "source": [
-        "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+        "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+        "160// 60"
       ]
     },
     {
