Colaboratory를 통해 생성됨

--- a/(3주차) Tuples(구대환).ipynb
+++ b/(3주차) Tuples(구대환).ipynb
@@ -15,7 +15,7 @@
         "id": "yqD0LR8aTSkU"
       },
       "source": [
-        "<p><strong>Welcome!</strong> This notebook will teach you about the tuples in the Python Programming Language. By the end of this lab, you'll know the basics tuple operations in Python, including indexing, slicing and sorting.</p> "
+        "<p><strong>Welcome!</strong> This notebook will teach you about the tuples in the Python Programming Language. By the end of this lab, you'll know the basics tuple operations in Python, including indexing, slicing and sorting.</p>"
       ]
     },
     {
@@ -24,7 +24,7 @@
         "id": "cNgWjOtcTSkV"
       },
       "source": [
-        "<h2 id=\"dataset\">About the Dataset</h2> <p><strong>We will use this dataset later in full in this course.</p> "
+        "<h2 id=\"dataset\">About the Dataset</h2> <p><strong>We will use this dataset later in full in this course.</p>"
       ]
     },
     {
@@ -43,7 +43,7 @@
         "- **length_min_sec** - Length of the album (hours,minutes,seconds)\n",
         "- **genre** - Genre of the album\n",
         "- **music_recording_sales_millions** - Music recording sales (millions in USD)\n",
-        "- **claimed_sales_millions** - Album's claimed sales (millions in USD) on \n",
+        "- **claimed_sales_millions** - Album's claimed sales (millions in USD) on\n",
         "- **date_released** - Date on which the album was released\n",
         "- **soundtrack** - Indicates if the album is the movie soundtrack (Y) or (N)\n",
         "- **rating_of_friends** - Indicates the rating from your friends from 1 to 10\n",
@@ -56,10 +56,10 @@
         "<table font-size:xx-small style=\"width:25%\">\n",
         "  <tr>\n",
         "    <th>Artist</th>\n",
-        "    <th>Album</th> \n",
+        "    <th>Album</th>\n",
         "    <th>Released</th>\n",
         "    <th>Length</th>\n",
-        "    <th>Genre</th> \n",
+        "    <th>Genre</th>\n",
         "    <th>Music recording sales (millions)</th>\n",
         "    <th>Claimed sales (millions)</th>\n",
         "    <th>Released</th>\n",
@@ -68,7 +68,7 @@
         "  </tr>\n",
         "  <tr>\n",
         "    <td>Michael Jackson</td>\n",
-        "    <td>Thriller</td> \n",
+        "    <td>Thriller</td>\n",
         "    <td>1982</td>\n",
         "    <td>00:42:19</td>\n",
         "    <td>Pop, rock, R&B</td>\n",
@@ -80,7 +80,7 @@
         "  </tr>\n",
         "  <tr>\n",
         "    <td>AC/DC</td>\n",
-        "    <td>Back in Black</td> \n",
+        "    <td>Back in Black</td>\n",
         "    <td>1980</td>\n",
         "    <td>00:42:11</td>\n",
         "    <td>Hard rock</td>\n",
@@ -92,7 +92,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Pink Floyd</td>\n",
-        "    <td>The Dark Side of the Moon</td> \n",
+        "    <td>The Dark Side of the Moon</td>\n",
         "    <td>1973</td>\n",
         "    <td>00:42:49</td>\n",
         "    <td>Progressive rock</td>\n",
@@ -104,7 +104,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Whitney Houston</td>\n",
-        "    <td>The Bodyguard</td> \n",
+        "    <td>The Bodyguard</td>\n",
         "    <td>1992</td>\n",
         "    <td>00:57:44</td>\n",
         "    <td>Soundtrack/R&B, soul, pop</td>\n",
@@ -116,7 +116,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Meat Loaf</td>\n",
-        "    <td>Bat Out of Hell</td> \n",
+        "    <td>Bat Out of Hell</td>\n",
         "    <td>1977</td>\n",
         "    <td>00:46:33</td>\n",
         "    <td>Hard rock, progressive rock</td>\n",
@@ -128,7 +128,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Eagles</td>\n",
-        "    <td>Their Greatest Hits (1971-1975)</td> \n",
+        "    <td>Their Greatest Hits (1971-1975)</td>\n",
         "    <td>1976</td>\n",
         "    <td>00:43:08</td>\n",
         "    <td>Rock, soft rock, folk rock</td>\n",
@@ -140,7 +140,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Bee Gees</td>\n",
-        "    <td>Saturday Night Fever</td> \n",
+        "    <td>Saturday Night Fever</td>\n",
         "    <td>1977</td>\n",
         "    <td>1:15:54</td>\n",
         "    <td>Disco</td>\n",
@@ -152,7 +152,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Fleetwood Mac</td>\n",
-        "    <td>Rumours</td> \n",
+        "    <td>Rumours</td>\n",
         "    <td>1977</td>\n",
         "    <td>00:40:01</td>\n",
         "    <td>Soft rock</td>\n",
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -245,12 +245,12 @@
         "id": "a0UY2imsTSkX"
       },
       "source": [
-        "The type of variable is a **tuple**. "
+        "The type of variable is a **tuple**."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -352,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -408,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -445,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -523,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -562,7 +562,7 @@
         "id": "MlBaRtGHb-24",
         "outputId": "22f9199e-795e-4e10-d929-c7732ac3ed76"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -609,12 +609,12 @@
         "id": "2eNk9H4ITSka"
       },
       "source": [
-        "We can slice tuples, obtaining new tuples with the corresponding elements: "
+        "We can slice tuples, obtaining new tuples with the corresponding elements:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -651,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -682,12 +682,12 @@
         "id": "myYgsWZ8TSka"
       },
       "source": [
-        "We can obtain the length of a tuple using the length command: "
+        "We can obtain the length of a tuple using the length command:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -733,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "KlTeeeM1TSkb"
@@ -751,12 +751,12 @@
         "id": "WaOy6-aUTSkb"
       },
       "source": [
-        "We can sort the values in a tuple and save it to a new tuple: "
+        "We can sort the values in a tuple and save it to a new tuple:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -798,12 +798,12 @@
         "id": "IDLKGZ82TSkb"
       },
       "source": [
-        "A tuple can contain another tuple as well as other more complex data types. This process is called 'nesting'. Consider the following tuple with several elements: "
+        "A tuple can contain another tuple as well as other more complex data types. This process is called 'nesting'. Consider the following tuple with several elements:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "sjFOPVDVTSkc"
@@ -843,7 +843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -903,7 +903,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -947,7 +947,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -979,7 +979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1020,7 +1020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1048,7 +1048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1112,7 +1112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1143,7 +1143,7 @@
         "# sample tuple\n",
         "\n",
         "genres_tuple = (\"pop\", \"rock\", \"soul\", \"hard rock\", \"soft rock\", \\\n",
-        "                \"R&B\", \"progressive rock\", \"disco\") \n",
+        "                \"R&B\", \"progressive rock\", \"disco\")\n",
         "genres_tuple"
       ]
     },
@@ -1158,13 +1158,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
-        "id": "CjPoP2NlTSke"
+        "id": "CjPoP2NlTSke",
+        "outputId": "a971bbc1-e267-4c4c-bba0-6bee85f99c34",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "len(genres_tuple)"
       ]
     },
     {
@@ -1195,18 +1211,38 @@
         "id": "nxGKq_zXTSke"
       },
       "source": [
-        "Access the element, with respect to index 3: "
+        "Access the element, with respect to index 3:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
-        "id": "dDQOgOryTSke"
+        "id": "dDQOgOryTSke",
+        "outputId": "e7f7f49e-2aeb-4b2d-a76f-f9732d58dbef",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'hard rock'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "genres_tuple[3]"
       ]
     },
     {
@@ -1215,7 +1251,7 @@
         "id": "ezm3Ve-OTSke"
       },
       "source": [
-        "Double-click __here__ for the solution.\n",
+        "*Double*-click __here__ for the solution.\n",
         "\n",
         "<!-- Your answer is below:\n",
         "genres_tuple[3]\n",
@@ -1233,13 +1269,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "M52TZCM5TSkf"
+        "id": "M52TZCM5TSkf",
+        "outputId": "98d84133-96d0-4a29-abd3-b8c65b2a6cb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('hard rock', 'soft rock', 'R&B')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "\n",
+        "genres_tuple[3:6]"
       ]
     },
     {
@@ -1266,13 +1319,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
-        "id": "siRm-jjETSkf"
+        "id": "siRm-jjETSkf",
+        "outputId": "626b34b6-af1d-421d-d5f7-f0456db8efca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('pop', 'rock')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "\n",
+        "genres_tuple[0:2]"
       ]
     },
     {
@@ -1299,13 +1369,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
-        "id": "ViKYpk8rTSkf"
+        "id": "ViKYpk8rTSkf",
+        "outputId": "05f6365f-8184-472d-aa31-ed44325078ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "genres_tuple.index(\"disco\")"
       ]
     },
     {
@@ -1332,13 +1418,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
-        "id": "bAs8GFw2TSkf"
+        "id": "bAs8GFw2TSkf",
+        "outputId": "ef1af466-b856-43a7-af66-1f0247525fc9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-5, -3, 1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "\n",
+        "C_tuple = (-5, 1, -3)\n",
+        "C_list = sorted(C_tuple)\n",
+        "C_list"
       ]
     },
     {
