Colaboratory를 통해 생성됨

--- a/(3주차) Lists(구대환).ipynb
+++ b/(3주차) Lists(구대환).ipynb
@@ -39,7 +39,7 @@
         "id": "Lj8h9ORD6OQq"
       },
       "source": [
-        "<p><strong>Welcome!</strong> This notebook will teach you about the lists in the Python Programming Language. By the end of this lab, you'll know the basics list operations in Python, including indexing, list operations and copy/clone list.</p> "
+        "<p><strong>Welcome!</strong> This notebook will teach you about the lists in the Python Programming Language. By the end of this lab, you'll know the basics list operations in Python, including indexing, list operations and copy/clone list.</p>"
       ]
     },
     {
@@ -66,8 +66,8 @@
         "- **released_year** - Year the album was released\n",
         "- **length_min_sec** - Length of the album (hours,minutes,seconds)\n",
         "- **genre** - Genre of the album\n",
-        "- **music_recording_sales_millions** - Music recording sales (millions in USD) \n",
-        "- **claimed_sales_millions** - Album's claimed sales (millions in USD) \n",
+        "- **music_recording_sales_millions** - Music recording sales (millions in USD)\n",
+        "- **claimed_sales_millions** - Album's claimed sales (millions in USD)\n",
         "- **date_released** - Date on which the album was released\n",
         "- **soundtrack** - Indicates if the album is the movie soundtrack (Y) or (N)\n",
         "- **rating_of_friends** - Indicates the rating from your friends from 1 to 10\n",
@@ -80,10 +80,10 @@
         "<table font-size:xx-small style=\"width:25%\">\n",
         "  <tr>\n",
         "    <th>Artist</th>\n",
-        "    <th>Album</th> \n",
+        "    <th>Album</th>\n",
         "    <th>Released</th>\n",
         "    <th>Length</th>\n",
-        "    <th>Genre</th> \n",
+        "    <th>Genre</th>\n",
         "    <th>Music recording sales (millions)</th>\n",
         "    <th>Claimed sales (millions)</th>\n",
         "    <th>Released</th>\n",
@@ -92,7 +92,7 @@
         "  </tr>\n",
         "  <tr>\n",
         "    <td>Michael Jackson</td>\n",
-        "    <td>Thriller</td> \n",
+        "    <td>Thriller</td>\n",
         "    <td>1982</td>\n",
         "    <td>00:42:19</td>\n",
         "    <td>Pop, rock, R&B</td>\n",
@@ -104,7 +104,7 @@
         "  </tr>\n",
         "  <tr>\n",
         "    <td>AC/DC</td>\n",
-        "    <td>Back in Black</td> \n",
+        "    <td>Back in Black</td>\n",
         "    <td>1980</td>\n",
         "    <td>00:42:11</td>\n",
         "    <td>Hard rock</td>\n",
@@ -116,7 +116,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Pink Floyd</td>\n",
-        "    <td>The Dark Side of the Moon</td> \n",
+        "    <td>The Dark Side of the Moon</td>\n",
         "    <td>1973</td>\n",
         "    <td>00:42:49</td>\n",
         "    <td>Progressive rock</td>\n",
@@ -128,7 +128,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Whitney Houston</td>\n",
-        "    <td>The Bodyguard</td> \n",
+        "    <td>The Bodyguard</td>\n",
         "    <td>1992</td>\n",
         "    <td>00:57:44</td>\n",
         "    <td>Soundtrack/R&B, soul, pop</td>\n",
@@ -140,7 +140,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Meat Loaf</td>\n",
-        "    <td>Bat Out of Hell</td> \n",
+        "    <td>Bat Out of Hell</td>\n",
         "    <td>1977</td>\n",
         "    <td>00:46:33</td>\n",
         "    <td>Hard rock, progressive rock</td>\n",
@@ -152,7 +152,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Eagles</td>\n",
-        "    <td>Their Greatest Hits (1971-1975)</td> \n",
+        "    <td>Their Greatest Hits (1971-1975)</td>\n",
         "    <td>1976</td>\n",
         "    <td>00:43:08</td>\n",
         "    <td>Rock, soft rock, folk rock</td>\n",
@@ -164,7 +164,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Bee Gees</td>\n",
-        "    <td>Saturday Night Fever</td> \n",
+        "    <td>Saturday Night Fever</td>\n",
         "    <td>1977</td>\n",
         "    <td>1:15:54</td>\n",
         "    <td>Disco</td>\n",
@@ -176,7 +176,7 @@
         "  </tr>\n",
         "    <tr>\n",
         "    <td>Fleetwood Mac</td>\n",
-        "    <td>Rumours</td> \n",
+        "    <td>Rumours</td>\n",
         "    <td>1977</td>\n",
         "    <td>00:40:01</td>\n",
         "    <td>Soft rock</td>\n",
@@ -250,7 +250,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b8d9cac-89e7-4d58-d1e9-3fb56fc7fa4d"
+        "outputId": "6a343fd1-59f2-491c-c361-e53d3edf18f9"
       },
       "source": [
         "# Create a list\n",
@@ -258,7 +258,7 @@
         "L = [\"Michael Jackson\", 10.1, 1982] #[] : indexing\n",
         "L"
       ],
-      "execution_count": 25,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +268,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 1
         }
       ]
     },
@@ -282,9 +282,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BmrFlijOm_xu",
-        "outputId": "0bd5254b-542d-4a8a-c004-9ab16515fbed"
+        "outputId": "9ed0833c-c1d8-4398-d949-6269f0da605a"
       },
-      "execution_count": 32,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,7 +294,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 2
         }
       ]
     },
@@ -335,7 +335,7 @@
         "print('the same element using negative and positive indexing:\\n Postive:',L[2],\n",
         "'\\n Negative:' , L[-1]  )"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +391,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
         "Tuple1\n",
         "Tuple1[0]=\"Janet\""
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -458,7 +458,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef3440a0-14cc-4f85-c980-a0cfceff3cf3"
+        "outputId": "6ee006d5-64d4-4124-d24b-3662db8d1a5c"
       },
       "source": [
         "# Sample List\n",
@@ -466,7 +466,7 @@
         "L = [\"Michael Jackson\", 10.1,1982,\"MJ\",1]\n",
         "L"
       ],
-      "execution_count": 37,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 4
         }
       ]
     },
@@ -496,14 +496,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2be6ad6f-16fc-4d27-902d-158b5bf93400"
+        "outputId": "3bd49bd7-0877-4cf9-a1c7-65e8d2ede3d0"
       },
       "source": [
         "# List slicing\n",
         "\n",
         "L[3:5]"
       ],
-      "execution_count": 38,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +513,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 5
         }
       ]
     },
@@ -531,28 +531,32 @@
       "metadata": {
         "id": "o-6mD3rB6ORF",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 35
         },
-        "outputId": "a2a2308f-d160-4a3e-d7f1-2ebc94aaeb3b"
+        "outputId": "036bc6b5-5660-4e3b-aed8-b464edec5a6e"
       },
       "source": [
         "# Use extend to add elements to list\n",
         "\n",
         "L = [ \"Michael Jackson\", 10.2]\n",
-        "L.extend(['pop', 10]) #['pop', 10] --> list \n",
-        "L[3]"
+        "L.extend(['pop', 10]) #['pop', 10] --> list\n",
+        "L[2]"
       ],
-      "execution_count": 46,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10"
-            ]
+              "'pop'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 7
         }
       ]
     },
@@ -570,32 +574,28 @@
       "metadata": {
         "id": "ylRoJQ7A6ORI",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d19f237-0761-4fb2-c393-37b299f4724e"
+        "outputId": "cc2255fc-6f62-4c7c-8c7b-45d15b908dab"
       },
       "source": [
         "# Use append to add elements to list\n",
         "\n",
         "L = [ \"Michael Jackson\", 10.2]\n",
         "L.append(['pop', 10]) #['pop', 10]\n",
-        "L[2][0]\n"
+        "L[2]\n"
       ],
-      "execution_count": 51,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'pop'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
+              "['pop', 10]"
+            ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 12
         }
       ]
     },
@@ -615,7 +615,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bb0a0221-1df7-49fd-8abc-fa4d798970f0"
+        "outputId": "24de85e7-20af-4053-c46e-e572f71ca721"
       },
       "source": [
         "# Delete the element based on the index\n",
@@ -624,7 +624,7 @@
         "del(A[0])\n",
         "print('After change:', A)"
       ],
-      "execution_count": 52,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,29 +651,10 @@
         "A = ['Michael Jackson', 10.2, 'pop', 10]"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "ScXjo95Pp0nc",
-        "outputId": "b58880a5-6a50-4bc1-8a99-c70a91badccf"
+        "id": "ScXjo95Pp0nc"
       },
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Michael Jackson'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 54
-        }
-      ]
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -683,7 +664,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "f0f0f375-6418-4525-cbb3-1d250d6a461e"
+        "outputId": "8847a9c0-f4ed-40f1-ca27-3fffd3376cd0"
       },
       "source": [
         "# Split the string, default is by space\n",
@@ -693,7 +674,7 @@
         "type(what)\n",
         "what[1]"
       ],
-      "execution_count": 58,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,7 +694,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 15
         }
       ]
     },
@@ -723,7 +704,7 @@
         "id": "JRCvIIhw6ORc"
       },
       "source": [
-        "We can use the split function to separate strings on a specific character. We pass the character we would like to split on into the argument, which in this case is a comma.  The result is a list, and each element corresponds to a set of characters that have been separated by a comma: "
+        "We can use the split function to separate strings on a specific character. We pass the character we would like to split on into the argument, which in this case is a comma.  The result is a list, and each element corresponds to a set of characters that have been separated by a comma:"
       ]
     },
     {
@@ -734,7 +715,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "7e72a8bd-c6cf-4c60-af51-7e3dc5609234"
+        "outputId": "108a93ac-b624-4188-af12-58de87988625"
       },
       "source": [
         "from re import split\n",
@@ -745,7 +726,7 @@
         "type(Split_string_comma)\n",
         "Split_string_comma[0]"
       ],
-      "execution_count": 61,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +739,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 16
         }
       ]
     },
@@ -787,7 +768,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1701c330-6497-46ae-fb83-5607b5a50557"
+        "outputId": "2a008ca6-b9f5-4717-aee8-4ffd9c612249"
       },
       "source": [
         "# Copy (copy by reference) the list A\n",
@@ -801,7 +782,7 @@
         "print('A:', A) #R&B, 10, 1.2\n",
         "print('B:', B) #'hard rock, 10, 1.2"
       ],
-      "execution_count": 63,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +815,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "POD6aVNX6ORj"
+        "id": "POD6aVNX6ORj",
+        "outputId": "be4cdd54-1691-4112-c8c7-09b5b78d858b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Examine the copy by reference\n",
@@ -843,8 +828,17 @@
         "A[0] = \"banana\"\n",
         "print('B[0]:', B[0])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "B[0]: R&B\n",
+            "B[0]: banana\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -862,7 +856,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "252a13f6-2639-4d48-8842-f6a612ad0a73"
+        "outputId": "dfa350c9-0eb8-415d-ed6e-e07361717ae4"
       },
       "source": [
         "# Clone (clone by value) the list A\n",
@@ -877,7 +871,7 @@
         "#print(B)\n",
         "#print(A)"
       ],
-      "execution_count": 66,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -924,19 +918,36 @@
         "id": "e4L88mTA6ORv"
       },
       "source": [
-        "Create a list <code>a_list</code>, with the following elements <code>1</code>, <code>hello</code>, <code>[1,2,3]</code> and <code>True</code>. "
+        "Create a list <code>a_list</code>, with the following elements <code>1</code>, <code>hello</code>, <code>[1,2,3]</code> and <code>True</code>."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HAN8rxnH6ORv"
+        "id": "HAN8rxnH6ORv",
+        "outputId": "ceaea80e-9c95-4cdb-8a0d-3e19ce4c6e33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "a_list = [1, 'hello', [1, 2, 3] , True]\n",
+        "a_list\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 'hello', [1, 2, 3], True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -964,13 +975,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tI_r_x-i6ORy"
+        "id": "tI_r_x-i6ORy",
+        "outputId": "13ec264a-ece8-493b-83ce-341e56643d5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "a_list[1]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'hello'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -997,13 +1028,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ebEasRQV6OR1"
+        "id": "ebEasRQV6OR1",
+        "outputId": "e21ed24d-b757-4e53-a476-5ac9df675e33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "a_list[1:4]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['hello', [1, 2, 3], True]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1030,13 +1077,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zCcOoqos6OR4"
+        "id": "zCcOoqos6OR4",
+        "outputId": "baedd72f-3940-4281-b513-33eb0d48b45f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "\n",
+        "A = [1, 'a']\n",
+        "B = [2, 1, 'd']\n",
+        "A + B"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 'a', 2, 1, 'd']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1047,7 +1113,7 @@
         "Double-click <b>here</b> for the solution.\n",
         "\n",
         "<!-- Your answer is below:\n",
-        "A = [1, 'a'] \n",
+        "A = [1, 'a']\n",
         "B = [2, 1, 'd']\n",
         "A + B\n",
         "-->"
