--- a/(3주차) Dictionaries(구대환).ipynb
+++ b/(3주차) Dictionaries(구대환).ipynb
@@ -94,16 +94,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8938396-e759-4ae7-8a2c-f9be4128ccb7"
+        "outputId": "5f91c0b0-0b19-4213-a38a-f9cbdde6c3a8"
       },
       "source": [
         "# Create the dictionary\n",
         "\n",
-        "Dict = {\"key1\": 1, \"key2\": \"2\", \"key3\": [3, 3, 3], \"key4\": (4, 4, 4), 'key5': 5, (0, 1): 6, 1.2: 5} \n",
+        "Dict = {\"key1\": 1, \"key2\": \"2\", \"key3\": [3, 3, 3], \"key4\": (4, 4, 4), 'key5': 5, (0, 1): 6, 1.2: 5}\n",
         "#{} :\n",
         "# key1 (키값) --> 1 (정수)\n",
         "# key2 (키값) --> \"2\" (문자열)\n",
-        "# key4 (키값) --> (4,4,4) tuple \n",
+        "# key4 (키값) --> (4,4,4) tuple\n",
         "# (0,1) tuple 키값 --> 5 (정수)\n",
         "Dict"
       ],
@@ -143,7 +143,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d62e625-9bc6-4b2e-f4a1-f0845f54be8b"
+        "outputId": "be6717ad-2455-4354-cc68-18ff3fa2a87a"
       },
       "source": [
         "# Access to the value by the key\n",
@@ -152,7 +152,7 @@
         "#Dict[(0,1)]\n",
         "Dict[\"key3\"]"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -162,7 +162,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 2
         }
       ]
     },
@@ -176,9 +176,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rwljeh2LTpFg",
-        "outputId": "00b0ae62-42cc-429e-bc5b-20ffea49caee"
+        "outputId": "0b745853-9edb-4183-df37-b9967a0f0a42"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,11 +190,11 @@
               " 'key4': (4, 4, 4),\n",
               " 'key5': 5,\n",
               " (0, 1): 6,\n",
-              " 1.2: 6}"
+              " 1.2: 5}"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -204,7 +204,7 @@
         "id": "_kL6zWbJ6RGn"
       },
       "source": [
-        "Keys can also be any mutable object such as a LIST: "
+        "Keys can also be any mutable object such as a LIST:"
       ]
     },
     {
@@ -214,15 +214,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "87c55f53-7522-4944-c56a-06179c28bf30"
+        "outputId": "773bb67d-6b40-48c1-96fd-32be34a58753"
       },
       "source": [
         "# Access to the value by the key\n",
         "\n",
-        "Dict[\"key3\"]=\"TEST\" #다른 값을 넣을 수 있니? \n",
+        "Dict[\"key3\"]=\"TEST\" #다른 값을 넣을 수 있니?\n",
         "Dict"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,7 +238,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -258,7 +258,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ebb9299-7244-477f-9084-ec9938991e6f"
+        "outputId": "3da7fd50-5b4a-4fb9-8e08-233651ba7de0"
       },
       "source": [
         "# Create a sample dictionary\n",
@@ -268,7 +268,7 @@
         "                    \"Saturday Night Fever\": \"1977\", \"Rumours\": \"1977\"}\n",
         "release_year_dict"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +285,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -342,14 +342,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "11833737-2646-4893-ff46-ed5494bc4ae1"
+        "outputId": "7e552606-a2e8-4cd9-a911-a4c8f0e7b065"
       },
       "source": [
         "# Get value by keys\n",
         "\n",
-        "release_year_dict['Their Greatest Hits (1971-1975)'] "
+        "release_year_dict['Their Greatest Hits (1971-1975)']"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +362,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -372,7 +372,7 @@
         "id": "5Bj10hYP6RG0"
       },
       "source": [
-        "This corresponds to: \n"
+        "This corresponds to:\n"
       ]
     },
     {
@@ -401,14 +401,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "8a0fee97-adb4-4321-f014-09cd304eb84e"
+        "outputId": "536e21fc-d74c-44cc-8ef9-84ad6053964e"
       },
       "source": [
         "# Get value by key\n",
         "\n",
-        "release_year_dict['The Bodyguard'] "
+        "release_year_dict['The Bodyguard']"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +421,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
@@ -450,14 +450,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "36b1acd3-64d1-4694-cbd1-a5f41603327b"
+        "outputId": "8eff3571-f9ae-40ef-9932-5b7f4ed19c13"
       },
       "source": [
         "# Get all the keys in dictionary\n",
         "\n",
-        "release_year_dict.keys() "
+        "release_year_dict.keys()"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +467,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
@@ -487,14 +487,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "115cb222-c439-45a2-bd0f-c91dae178c7b"
+        "outputId": "b9c1cfc1-7567-4281-e9b9-754df426712d"
       },
       "source": [
         "# Get all the values in dictionary\n",
         "\n",
-        "release_year_dict.values() "
+        "release_year_dict.values()"
       ],
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +504,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 9
         }
       ]
     },
@@ -533,7 +533,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "780262a9-1b45-4318-93e1-b44802e97fb8"
+        "outputId": "aa20b045-a14c-4e99-8095-e464651c7d40"
       },
       "source": [
         "# Append value with key into dictionary\n",
@@ -541,7 +541,7 @@
         "release_year_dict['Graduation'] = '2007'\n",
         "release_year_dict"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +559,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 10
         }
       ]
     },
@@ -579,7 +579,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "96ddeb94-163e-4733-d5e8-dac885fccf92"
+        "outputId": "d0fc0b5e-1401-4666-ec39-a4a612d7d4ab"
       },
       "source": [
         "# Delete entries by key\n",
@@ -588,7 +588,7 @@
         "del(release_year_dict['Graduation'])\n",
         "release_year_dict"
       ],
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,7 +604,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         }
       ]
     },
@@ -614,7 +614,7 @@
         "id": "LUKuGXkX6RHH"
       },
       "source": [
-        " We can verify if an element is in the dictionary: "
+        " We can verify if an element is in the dictionary:"
       ]
     },
     {
@@ -624,12 +624,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8b0e7592-0703-4954-9b7c-7fbb39eb46c4"
+        "outputId": "551df32d-23b4-44ef-8eba-7da40982039e"
       },
       "source": [
         "'Thriller' in release_year_dict"
       ],
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,7 +639,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -651,7 +651,7 @@
       "source": [
         "del(release_year_dict['Rumours'])"
       ],
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -661,12 +661,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cf6560fc-34c7-452d-b4d2-41bf82342c10"
+        "outputId": "55abad3b-a475-4d16-cf63-34c9fb4760fa"
       },
       "source": [
         "'Rumours' in release_year_dict"
       ],
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -676,7 +676,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 14
         }
       ]
     },
@@ -690,9 +690,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b916NselvpG8",
-        "outputId": "ceedf36f-1f21-48a2-c2f8-002504ce514e"
+        "outputId": "571fea56-6476-4d18-9ae6-0ab48478e2ff"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -702,7 +702,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 15
         }
       ]
     },
@@ -728,15 +728,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "KzchPkGo6RHM",
-        "outputId": "37e73c56-ea55-4b52-8f64-24d7ebb3325b"
+        "outputId": "c7deec02-3d7b-48e6-df69-bf1694a101a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Question sample dictionary\n",
         "\n",
         "soundtrack_dic = {\"The Bodyguard\":\"1992\", \"Saturday Night Fever\":\"1977\"}\n",
-        "soundtrack_dic "
+        "soundtrack_dic"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,10 +748,8 @@
               "{'The Bodyguard': '1992', 'Saturday Night Fever': '1977'}"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     },
@@ -765,12 +766,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "7KqlVIvg6RHP",
-        "outputId": "b43e1846-956e-49cd-b106-8e0293769c82"
+        "outputId": "277c43f0-2c23-40ec-d806-f467a353474b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "soundtrack_dic.keys() # The Keys \"The Bodyguard\" and \"Saturday Night Fever\""
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -779,10 +784,8 @@
               "dict_keys(['The Bodyguard', 'Saturday Night Fever'])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
@@ -795,7 +798,7 @@
         "Double-click __here__ for the solution.\n",
         "\n",
         "<!-- Your answer is below:\n",
-        "soundtrack_dic.keys() # The Keys \"The Bodyguard\" and \"Saturday Night Fever\" \n",
+        "\n",
         "-->"
       ]
     },
@@ -812,12 +815,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "Nu1mO5716RHT",
-        "outputId": "84cadab2-79ca-4de5-cc9d-e3680c847127"
+        "outputId": "fb68343b-4ccb-4af9-91ff-dd7be46a9b24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "\n",
+        "soundtrack_dic.values() # The values are \"1992\" and \"1977\""
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,10 +834,8 @@
               "dict_values(['1992', '1977'])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     },
@@ -879,7 +885,7 @@
         "id": "5nWxYu8e6RHX"
       },
       "source": [
-        "a) Create a dictionary <code>album_sales_dict</code> where the keys are the album name and the sales in millions are the values. "
+        "a) Create a dictionary <code>album_sales_dict</code> where the keys are the album name and the sales in millions are the values."
       ]
     },
     {
@@ -888,9 +894,11 @@
         "id": "M2OZ0Enk6RHX"
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "\n",
+        "album_sales_dict = {\"The Bodyguard\":50, \"Back in Black\":50, \"Thriller\":65}"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -918,13 +926,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ttTaU0n46RHb"
+        "id": "ttTaU0n46RHb",
+        "outputId": "de8bafd2-a813-4ff5-be7a-8adf6996868b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "album_sales_dict[\"Thriller\"]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "65"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -951,13 +975,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sT0kk4xM6RHe"
+        "id": "sT0kk4xM6RHe",
+        "outputId": "19731b93-495d-4558-feb3-cab788f1686d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "album_sales_dict.keys()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['The Bodyguard', 'Back in Black', 'Thriller'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -984,13 +1024,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MXLMCgLe6RHi"
+        "id": "MXLMCgLe6RHi",
+        "outputId": "cf761538-34f1-49ac-ed68-fb17f2b1d66d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "album_sales_dict.values()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([50, 50, 65])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
